<resources>
    <string name="app_name">Weather App</string>
    <string name="current_location">Current Location</string>
    <string name="control_font_family_toolbar">sans-serif-medium</string>
    <string name="control_font_family_display">sans-serif-light</string>
    <string name="updated">updated at %1$s</string>
    <string name="updated_days_ago">Updated 1 day ago</string>
    <string name="updated_fail">Update failed, please try again later</string>
    <string name="updated_hours_ago">Updated %1$s hours ago</string>
    <string name="updated_mins_ago">Updated %1$s mins ago</string>
    <string name="message_gps_off">The GPS signal is unavailable. Please turn Location on.</string>
    <string name="title_settings">Settings</string>
    <string name="nothing">--</string>
    <string name="slash">/</string>
    <string name="fifteen_day_forecast">15-day forecast</string>
    <string name="body_temp">Perceived temperature</string>
    <string name="single_humidity">HUM</string>
    <string name="single_precipitation">Precipitation</string>
    <string name="single_precipitationprobability">Precipitation probability</string>
    <string name="single_visibility">Visibility</string>
    <string name="single_pressure">Pressure</string>
    <string name="single_uv">UV</string>

    <string name="api_wind_direction_e">East wind</string>
    <string name="api_wind_direction_ene">ENE wind</string>
    <string name="api_wind_direction_ese">ESE wind</string>
    <string name="api_wind_direction_n">North wind</string>

    <string name="api_wind_direction_ne">NE wind</string>
    <string name="api_wind_direction_nne">NNE wind</string>
    <string name="api_wind_direction_nw">NW wind</string>
    <string name="api_wind_direction_nnw">NNW wind</string>

    <string name="api_wind_direction_s">South wind</string>
    <string name="api_wind_direction_se">SE wind</string>
    <string name="api_wind_direction_sse">SSE wind</string>
    <string name="api_wind_direction_ssw">SSW wind</string>
    <string name="api_wind_direction_sw">SW wind</string>
    <string name="api_wind_direction_w">West wind</string>
    <string name="api_wind_direction_wnw">WNW wind</string>
    <string name="api_wind_direction_wsw">WSW wind</string>

    <string name="api_wind_direction_rw">Swirling wind</string>
    <string name="api_wind_direction_na">No sustained wind direction</string>


    <string name="no_cities">No Cities</string>
    <string name="settings_delete">Delete</string>
    <string name="select_cities">Select city</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="city_list_search_hint">Input the city name</string>
    <string name="search_something">Search City</string>
    <string name="locate_current_city">Locate current city</string>
    <string name="locate">Locate</string>
    <string name="city_exist">Added</string>
    <string name="no_matches">No matches</string>
    <string name="no_network">No network connection</string>
    <string name="unable_to_locate_city">Unable to locate the current city and need to get your location information</string>
    <string name="dialog_go_to_settings">Go to Settings</string>
    <string name="cancel">@android:string/cancel</string>
    <string name="GPS_disabled">It seems that your GPS is disabled, do you want to activate it?</string>
    <string name="Network_disabled">It seems that your connection is disabled, do you want to activate it?</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="GPS_permissions">You must accept the permissions to use the application</string>
    <string name="btn_watch_permissions">Watch Permissions</string>
    <string name="btn_close">Close</string>
    <string name="error">Error</string>
    <string name="locate_error">Some error occurred while trying to locate</string>
    <string name="no_network_connection">Please check your internet connection.</string>
    <string name="no_city_data">No city data to show, please add a city and retry</string>
    <string name="ok_city">ADD CITY</string>
    <string name="CANCEL">CANCEL</string>
    <string name="OPEN">OPEN</string>
    <string name="DISMISS">DISMISS</string>


    <string name="enum_weather_type_thunderstorm_200">Thunderstorm with light rain</string>
    <string name="enum_weather_type_thunderstorm_201">Thunderstorm with rain</string>
    <string name="enum_weather_type_thunderstorm_202">Thunderstorm with heavy rain</string>
    <string name="enum_weather_type_thunderstorm_210">Light thunderstorm</string>
    <string name="enum_weather_type_thunderstorm_211">Thunderstorm</string>
    <string name="enum_weather_type_thunderstorm_212">Heavy thunderstorm</string>
    <string name="enum_weather_type_thunderstorm_221">Ragged thunderstorm</string>
    <string name="enum_weather_type_thunderstorm_230">Thunderstorm with light drizzle</string>
    <string name="enum_weather_type_thunderstorm_231">Thunderstorm with drizzle</string>
    <string name="enum_weather_type_thunderstorm_232">Thunderstorm with heavy drizzle</string>

    <string name="enum_weather_type_drizzle_300">Light intensity drizzle</string>
    <string name="enum_weather_type_drizzle_301">Drizzle</string>
    <string name="enum_weather_type_drizzle_302">Heavy intensity drizzle</string>
    <string name="enum_weather_type_drizzle_310">Light intensity drizzle rain</string>
    <string name="enum_weather_type_drizzle_311">Drizzle rain</string>
    <string name="enum_weather_type_drizzle_312">Heavy intensity drizzle rain</string>
    <string name="enum_weather_type_drizzle_313">Shower rain and drizzle</string>
    <string name="enum_weather_type_drizzle_314">Heavy shower rain and drizzle</string>
    <string name="enum_weather_type_drizzle_321">Shower Drizzle</string>

    <string name="enum_weather_type_rain_500">Light rain</string>
    <string name="enum_weather_type_rain_501">Moderate rain</string>
    <string name="enum_weather_type_rain_502">Heavy intensity rain</string>
    <string name="enum_weather_type_rain_503">Very heavy rain</string>
    <string name="enum_weather_type_rain_504">Extreme rain</string>
    <string name="enum_weather_type_rain_511">Freezing rain</string>
    <string name="enum_weather_type_rain_520">Light intensity shower rain</string>
    <string name="enum_weather_type_rain_521">Shower rain</string>
    <string name="enum_weather_type_rain_522">Heavy intensity shower rain</string>
    <string name="enum_weather_type_rain_531">Ragged shower rain</string>

    <string name="enum_weather_type_snow_600">Light snow</string>
    <string name="enum_weather_type_snow_601">Snow</string>
    <string name="enum_weather_type_snow_602">Heavy snow</string>
    <string name="enum_weather_type_snow_611">Sleet</string>
    <string name="enum_weather_type_snow_612">Light shower sleet</string>
    <string name="enum_weather_type_snow_613">Shower sleet</string>
    <string name="enum_weather_type_snow_615">Light rain and snow</string>
    <string name="enum_weather_type_snow_616">Rain and snow</string>
    <string name="enum_weather_type_snow_620">Light shower snow</string>
    <string name="enum_weather_type_snow_621">Shower snow</string>
    <string name="enum_weather_type_snow_622">Heavy shower snow</string>

    <string name="enum_weather_type_mist_701">Mist</string>
    <string name="enum_weather_type_smoke_711">Smoke</string>
    <string name="enum_weather_type_haze_721">Haze</string>
    <string name="enum_weather_type_dust_731">Sand/dust whirls</string>
    <string name="enum_weather_type_fog_741">Fog</string>
    <string name="enum_weather_type_sand_751">Sand</string>
    <string name="enum_weather_type_dust_761">Dust</string>
    <string name="enum_weather_type_ash_762">Ash</string>
    <string name="enum_weather_type_squall_771">Squalls</string>
    <string name="enum_weather_type_tornado_781">Tornado</string>

    <string name="enum_weather_type_clear_800">Clear</string>
    <string name="enum_weather_type_clouds_801">Few clouds</string>
    <string name="enum_weather_type_clouds_802">Scattered clouds</string>
    <string name="enum_weather_type_clouds_803">Broken clouds</string>
    <string name="enum_weather_type_clouds_804">Overcast clouds</string>
    <string name="temperature">Temperature</string>
    <string name="celsius">Celsius - ℃</string>
    <string name="fahrenheit">Fahrenheit - ℉</string>
    <string name="meters_per_second">Meters per second - m/s</string>
    <string name="kilometers_per_hour">Kilometers per hour - km/h</string>
    <string name="foot_per_second">Feet per second - ft/s</string>
    <string name="miles_per_hour">Miles per hour - mph</string>
    <string name="wind">Wind</string>
    <string name="precipitation">Precipitation</string>
    <string name="visibility">Visibility</string>
    <string name="millimeter">Millimeters - mm</string>
    <string name="kilometers">Kilometers - km</string>
    <string name="miles">Miles - mi</string>
    <string name="inch">Inches - in</string>
    <string name="about">About</string>


</resources>