<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@android:color/transparent"
        android:paddingStart="14dp"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp">

        <FrameLayout
            android:id="@+id/toolbar_icon_container"
            android:layout_width="@dimen/control_image_standard"
            android:layout_height="@dimen/control_image_standard"
            android:layout_marginEnd="@dimen/control_padding_space2">

            <ImageView
                android:id="@+id/ic_back"
                android:layout_width="@dimen/control_icon_size_button"
                android:layout_height="@dimen/control_icon_size_button"
                android:layout_gravity="center"
                android:src="@drawable/ic_back"
                android:visibility="visible" />
        </FrameLayout>

        <Space
            android:id="@+id/title_spacing"
            android:layout_width="10dp"
            android:layout_height="match_parent" />

        <com.example.weatherapp.utils.ClearableEditText
            android:id="@+id/search_bar_input_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/control_margin2"
            android:background="@null"
            android:hint="@string/city_list_search_hint"
            android:importantForAutofill="no"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/text_secondary_dark"
            android:textCursorDrawable="@drawable/edit_text_cursor"
            android:textSize="16sp"
            app:clearButtonDrawable="@drawable/ic_clear"
            app:clearButtonHeight="24dp"
            app:clearButtonWidth="24dp" />
    </com.google.android.material.appbar.MaterialToolbar>


    <LinearLayout
        android:id="@+id/located_city_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/located_city_title"
            style="@style/CityTagTitle"
            android:text="@string/locate_current_city" />

        <include layout="@layout/located_city"
            android:id="@+id/located_city_layout"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relative_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:saveEnabled="false">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/searched_cities"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible" />


    </RelativeLayout>


    <TextView
        android:id="@+id/hint_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="188dp"
        android:drawablePadding="8dp"
        android:gravity="center"
        android:text="@string/search_something"
        android:textAppearance="@style/control_text_under_display"
        android:textColor="@color/icon_color_active_dark"
        android:textSize="16sp"
        android:visibility="visible"
        app:drawableTopCompat="@drawable/ic_search" />


</RelativeLayout>